# routes/index.js
@@ -1,10 +1,10 @@
 const set = app => {
   const controller = require('../controllers');
 
-  app.get('/', controller.get);
-  app.post('/', controller.post);
-  app.put('/', controller.put);
-  app.delete('/', controller.delete);
+  app.get('/data', controller.get);
+  app.post('/data', controller.post);
+  app.put('/data', controller.put);
+  app.delete('/data', controller.delete);
 }
 
 export {
